--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,161 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.products_container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+}
+ 
+.product_wrapper {
+  width: 250px;
+  border: 1px solid #ccc;
+  margin: 20px;
+  padding: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.product_wrapper img {
+  width: 100%;
+  object-fit: contain;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.product_wrapper .view_product_btn {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  text-align: center;
+  color: #000;
+  transition: all 0.3s ease-in-out;
 }
+
+.product_wrapper .view_product_btn:hover {
+  background-color: #dd219e;
+  color: #fff;
+}
+
+/* product screen */
+.about_product_wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  align-items:center;
+}
+
+.about_product_wrapper .left img {
+  width: 400px;
+  height: 100%;
+}
+
+/* Cart Screen */
+.cartitem {
+  width: 100%;
+  padding: 1rem;
+  margin-bottom: 8px;
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr 1fr 1fr;
+  gap: 8px;
+  background-color: #fff;
+  border-radius: 2px;
+  place-items: center;
+}
+
+.cartitem_name {
+  text-decoration: none;
+  color: #171717;
+}
+
+.cartitem_name:hover {
+  color: #dd219e;
+}
+
+.cartitem_select {
+  padding: 10px 17px;
+}
+
+.cartitem_deleteBtn {
+  padding: 10px 17px;
+  color: red;
+  background-color: #f4f4f4;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+  border: 1px solid #171717;
+}
+
+.cartitem_deleteBtn:hover,
+.cartitem_deleteBtn:focus,
+.cartitem_deleteBtn:active {
+  background-color: #171717;
+  transform: scale(1.2);
+}
+
+/* Cart Screen */
+.cartscreen {
+  display: flex;
+  max-width: 1300px;
+  margin: 2rem auto;
+}
+
+.cartscreen h2 {
+  margin-bottom: 1rem;
+}
+
+.cartscreen_left {
+  flex: 0.7;
+  margin-right: 1rem;
+  background-color: transparent;
+  padding: 1rem;
+}
+
+.cartscreen-right {
+  flex: 0.3;
+  background-color: #fff;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.4);
+  height: fit-content;
+}
+
+.cartscreen_right div {
+  border-bottom: 1px solid rgba(0,0,0,0.2);
+  padding: 1rem;
+}
+
+.cartscreen_right div:last-child {
+  border: none;
+}
+
+.cartscreen_info p {
+  padding: 8px;
+}
+
+.cartscreen_right div button {
+  padding: 10px 17px;
+  width: 100%;
+  background-color: #171717;
+  color: #f4f4f4;
+  border: 1px solid #171717;
+  cursor: pointer;
+}
+
+.cartscreen_right div button:hover {
+  opacity: 0.9;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
